fixed build error by using node 21 as a base impage

--- a/frontend/3dcitydb-web-map/index.html
+++ b/frontend/3dcitydb-web-map/index.html
@@ -833,7 +833,7 @@
             </div>
         </div>
         <div id="tryChartContainer" style="display: none; width: 600px;"></div>
-        <div style="background-color: grey; display: none; width: 200px;" id="formSimulateContainer">
+        <div style="background-color: blue; display: none; width: 200px;" id="formSimulateContainer">
             <ul>
                 <li>
                     <label for='areaInput'>Area of Building:</label>
