changed entrypoint to /cesium

--- a/frontend/3dcitydb-web-map/examples/glTFRailwaySceneLoD3Example/index.html
+++ b/frontend/3dcitydb-web-map/examples/glTFRailwaySceneLoD3Example/index.html
@@ -83,7 +83,7 @@
     <script src="../../3dwebclient/utils/UrlController.js"></script>
 
     <style>
-        @import url(../../ThirdParty/Cesium/Widgets/widgets.css);
+        @import url(/cesium/ThirdParty/Cesium/Widgets/widgets.css);
 
         html, body, #cesiumContainer {
             top: 0px;
