--- a/frontend/3dcitydb-web-map/index.html
+++ b/frontend/3dcitydb-web-map/index.html
@@ -35,16 +35,16 @@
         <meta name="viewport"
               content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
         <title>3DCityDB-Web-Map-Client</title>
-        <script src="../ThirdParty/jquery-3.3.1.min.js"></script>
+        <script src="/cesium/ThirdParty/jquery-3.3.1.min.js"></script>
         <!-- Load jquery ui datepicker FLATPICKR -->
         <link rel="stylesheet"
               type="text/css"
-              href="../ThirdParty/flatpickrv4.5.1.css">
+              href="/cesium/ThirdParty/flatpickrv4.5.1.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
               rel="stylesheet">
-        <script type="text/javascript" src="../ThirdParty/flatpickrv4.5.1.js"></script>
+        <script type="text/javascript" src="/cesium/ThirdParty/flatpickrv4.5.1.js"></script>
         <!-- CesiumJS -->
         <script src="https://cdn.jsdelivr.net/npm/chart.js@4.2.0/dist/chart.umd.min.js"></script>
         <script src="https://code.highcharts.com/highcharts.js"></script>
@@ -54,51 +54,51 @@
         <script src="https://code.highcharts.com/highcharts-more.js"></script>
         <script src="https://code.highcharts.com/modules/exporting.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-        <script src="../ThirdParty/Cesium/Cesium.js"></script>
-        <script src="../ThirdParty/Intersection/IntersectionAPI.js"></script>
-        <script src="../ThirdParty/Cesium-Navigation/Cesium-Navigation.js"></script>
+        <script src="/cesium/ThirdParty/Cesium/Cesium.js"></script>
+        <script src="/cesium/ThirdParty/Intersection/IntersectionAPI.js"></script>
+        <script src="/cesium/ThirdParty/Cesium-Navigation/Cesium-Navigation.js"></script>
         <link rel="stylesheet"
               type="text/css"
-              href="../ThirdParty/Cesium-Navigation/Cesium-Navigation.css" />
-        <script src="../js/3dcitydb-web-map.js"></script>
-        <script src="../js/CitydbUtil.js"></script>
-        <script src="../js/CitydbWebworker.js"></script>
-        <script src="../js/CitydbSceneTransforms.js"></script>
-        <script src="../js/CitydbKmlHighlightingManager.js"></script>
-        <script src="../js/CitydbKmlTilingManager.js"></script>
-        <script src="../js/CitydbKmlDataSource.js"></script>
-        <script src="../js/CitydbKmlLayer.js"></script>
-        <script src="../js/Cesium3DTilesDataLayer.js"></script>
+              href="/cesium/ThirdParty/Cesium-Navigation/Cesium-Navigation.css" />
+        <script src="/cesium/js/3dcitydb-web-map.js"></script>
+        <script src="/cesium/js/CitydbUtil.js"></script>
+        <script src="/cesium/js/CitydbWebworker.js"></script>
+        <script src="/cesium/js/CitydbSceneTransforms.js"></script>
+        <script src="/cesium/js/CitydbKmlHighlightingManager.js"></script>
+        <script src="/cesium/js/CitydbKmlTilingManager.js"></script>
+        <script src="/cesium/js/CitydbKmlDataSource.js"></script>
+        <script src="/cesium/js/CitydbKmlLayer.js"></script>
+        <script src="/cesium/js/Cesium3DTilesDataLayer.js"></script>
         <!-- Sign in utilities -->
         <script type="text/javascript"
                 src="https://apis.google.com/js/api:client.js?onLoad=onGoogleScriptLoaded"></script>
-        <script src="utils/SigninController.js"></script>
+        <script src="/cesium/utils/SigninController.js"></script>
         <!-- GPS geolocation with device orientation in real-time -->
-        <script src="utils/GPSController.js"></script>
+        <script src="/cesium/utils/GPSController.js"></script>
         <!-- Mobile utilities -->
-        <script src="utils/MobileController.js"></script>
+        <script src="/cesium/utils/MobileController.js"></script>
         <!-- OpenStreetMap GeoCoder Nominatim -->
-        <script src="utils/OpenStreetMapNominatimGeocoder.js"></script>
+        <script src="/cesium/utils/OpenStreetMapNominatimGeocoder.js"></script>
         <!-- Splash Controller-->
-        <script src="utils/SplashController.js"></script>
+        <script src="/cesium/utils/SplashController.js"></script>
         <!-- Mashup Data Source Service -->
-        <script src="utils/mashup-data-source-service/core/DataRecord.js"></script>
-        <script src="utils/mashup-data-source-service/core/DataSourceCapability.js"></script>
-        <script src="utils/mashup-data-source-service/core/QueryResult.js"></script>
-        <script src="utils/mashup-data-source-service/core/ReadableDataSource.js"></script>
-        <script src="utils/mashup-data-source-service/core/WritableDataSource.js"></script>
-        <script src="utils/mashup-data-source-service/core/DataSource.js"></script>
-        <script src="utils/mashup-data-source-service/core/SQLDataSource.js"></script>
-        <script src="utils/mashup-data-source-service/core/XMLDataSource.js"></script>
-        <script src="utils/mashup-data-source-service/application/GoogleSheets.js"></script>
-        <script src="utils/mashup-data-source-service/application/PostgreSQL.js"></script>
-        <script src="utils/mashup-data-source-service/application/KMLDataSource.js"></script>
-        <script src="utils/mashup-data-source-service/core/MashupDataSource.js"></script>
-        <script src="utils/mashup-data-source-service/application/DataSourceController.js"></script>
+        <script src="/cesium/utils/mashup-data-source-service/core/DataRecord.js"></script>
+        <script src="/cesium/utils/mashup-data-source-service/core/DataSourceCapability.js"></script>
+        <script src="/cesium/utils/mashup-data-source-service/core/QueryResult.js"></script>
+        <script src="/cesium/utils/mashup-data-source-service/core/ReadableDataSource.js"></script>
+        <script src="/cesium/utils/mashup-data-source-service/core/WritableDataSource.js"></script>
+        <script src="/cesium/utils/mashup-data-source-service/core/DataSource.js"></script>
+        <script src="/cesium/utils/mashup-data-source-service/core/SQLDataSource.js"></script>
+        <script src="/cesium/utils/mashup-data-source-service/core/XMLDataSource.js"></script>
+        <script src="/cesium/utils/mashup-data-source-service/application/GoogleSheets.js"></script>
+        <script src="/cesium/utils/mashup-data-source-service/application/PostgreSQL.js"></script>
+        <script src="/cesium/utils/mashup-data-source-service/application/KMLDataSource.js"></script>
+        <script src="/cesium/utils/mashup-data-source-service/core/MashupDataSource.js"></script>
+        <script src="/cesium/utils/mashup-data-source-service/application/DataSourceController.js"></script>
         <!-- URL controller -->
-        <script src="utils/UrlController.js"></script>
+        <script src="/cesium/utils/UrlController.js"></script>
         <style>
-            @import url(../ThirdParty/Cesium/Widgets/widgets.css);
+            @import url(/cesium/ThirdParty/Cesium/Widgets/widgets.css);
             @import url(css/GPSButtonStyles.css);
             @import url(css/MobileFullscreenStyles.css);
             @import url(css/SplashWindow.css);
@@ -154,7 +154,7 @@
                 background-repeat: no-repeat;
                 background-image: url(../theme/img/ajax-loader.gif);
             }
-
+/
             #loadingScreen {
                 display: block;
                 position: absolute;
@@ -944,6 +944,6 @@
                 }
             }
         </script>
-        <script src="script.js"></script>
+        <script src="/cesium/script.js"></script>
     </body>
 </html>
