Used correct option values in selects

--- a/frontend/3dcitydb-web-map/index.html
+++ b/frontend/3dcitydb-web-map/index.html
@@ -400,10 +400,10 @@
                                                 <label for="filterBuildingResidential">Residential buildings</label>
                                                 <select id="filterBuildingResidential" onchange="onBuildingResidentialChange(event)">
                                                     <option value="">Select an option</option>
-                                                    <option value="option 1">SFH</option>
-                                                    <option value="option 2">TH</option>
-                                                    <option value="option 3">MFH</option>
-                                                    <option value="option 4">AB</option>
+                                                    <option value="sfh">SFH</option>
+                                                    <option value="th">TH</option>
+                                                    <option value="mfh">MFH</option>
+                                                    <option value="ab">AB</option>
                                                 </select>
                                             </div>
 
@@ -411,11 +411,11 @@
                                                 <label for="filterBuildingNonResidential">Non-residential buildings</label>
                                                 <select id="filterBuildingNonResidential" onchange="onBuildingNonResidentialChange(event)">
                                                     <option value="">Select an option</option>
-                                                    <option value="option 1">IWU Hotels</option>
-                                                    <option value="option 2">Boarding</option>
-                                                    <option value="option 3">Restaurants or Catering</option>
-                                                    <option value="option 4">Administrative or Government</option>
-                                                    <option value="option 5">IWU Technical and Utility</option>
+                                                    <option value="hotels">IWU Hotels</option>
+                                                    <option value="boarding">Boarding</option>
+                                                    <option value="restaurants">Restaurants or Catering</option>
+                                                    <option value="administrative">Administrative or Government</option>
+                                                    <option value="technical">IWU Technical and Utility</option>
                                                 </select>
                                             </div>
                                             
@@ -423,9 +423,9 @@
                                                 <label for="filterStatus">Residential status</label>
                                                 <select id="filterStatus" onchange="onBuildingStatusChange(event)">
                                                     <option value="">Select an option</option>
-                                                    <option value="option 1">0</option>
-                                                    <option value="option 2">1</option>
-                                                    <option value="option 3">2</option>
+                                                    <option value="0">0</option>
+                                                    <option value="1">1</option>
+                                                    <option value="2">2</option>
                                                 </select>
                                             </div>
 
