put value of API_ADDRESS into seperate file env.js, allows easier change of API_ADDRESS

--- a/frontend/3dcitydb-web-map/index.html
+++ b/frontend/3dcitydb-web-map/index.html
@@ -70,6 +70,7 @@
         <script src="/cesium/js/CitydbKmlLayer.js"></script>
         <script src="/cesium/js/Cesium3DTilesDataLayer.js"></script>
         <!-- Sign in utilities -->
+        
         <script type="text/javascript"
                 src="https://apis.google.com/js/api:client.js?onLoad=onGoogleScriptLoaded"></script>
         <script src="/cesium/utils/SigninController.js"></script>
@@ -944,6 +945,7 @@
                 }
             }
         </script>
+        <script src="/cesium/env.js"></script>
         <script src="/cesium/script.js"></script>
     </body>
 </html>
